--- a/server/package.json
+++ b/server/package.json
@@ -11,12 +11,15 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.842.0",
+    "@aws-sdk/s3-request-presigner": "^3.842.0",
     "bcrypt": "^6.0.0",
     "body-parser": "^2.2.0",
     "child_process": "^1.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.6.0",
     "express": "^5.1.0",
+    "mongodb": "^6.17.0",
     "mongoose": "^8.16.1",
     "nodemon": "^3.1.10",
     "path": "^0.12.7"
