--- a/matchmaker-app/package.json
+++ b/matchmaker-app/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@propelauth/frontend-apis-react": "^0.0.15",
+    "@propelauth/react": "^2.0.29",
     "@tailwindcss/vite": "^4.1.10",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
