--- a/matchmaker-app/package.json
+++ b/matchmaker-app/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@propelauth/frontend-apis": "^0.0.15",
     "@propelauth/frontend-apis-react": "^0.0.15",
     "@propelauth/react": "^2.0.29",
     "@tailwindcss/vite": "^4.1.10",
