--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "express": "^5.1.0",
     "mongodb": "^6.17.0",
     "mongoose": "^8.16.1",
+    "multer": "^2.0.2",
     "nodemon": "^3.1.10",
     "path": "^0.12.7"
   }
